--- a/src/02-component-patterns/styles/styles.module.css
+++ b/src/02-component-patterns/styles/styles.module.css
@@ -58,3 +58,10 @@
 .buttonAdd:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
+
+.disabled {
+    border-color: red !important;
+    border-left: 1px solid white !important;
+    color: grey !important;
+    cursor: default;
+}
