--- a/src/02-component-patterns/styles/styles.module.css
+++ b/src/02-component-patterns/styles/styles.module.css
@@ -1,8 +1,12 @@
+
+
 .productCard {
-    background-color: white;
+    background-color: #1E2025;
     border-radius: 15px;
-    color: black;
+    box-shadow: 0px 2px 10px rgba(0,0,0,0.15);
+    color: white;
     padding-bottom: 5px;
+    font-family: Arial, Helvetica, sans-serif;
     width: 250px;
     margin-right: 5px;
     margin-top: 5px;
@@ -14,7 +18,8 @@
 }
 
 .productDescription {
-    margin: 10px;
+    display: block;
+    margin: 5px 10px;
 }
 
 .buttonsContainer {
@@ -26,8 +31,9 @@
 .buttonMinus {
     cursor: pointer;
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 5px 0px 0px 5px;
+    color: white;
     font-size: 20px;
     width: 30px;
 }
@@ -37,8 +43,9 @@
 }
 
 .countLabel {
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
+    border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    color: white;
     font-size: 16px;
     height: 25px;
     padding-top: 5px;
@@ -49,8 +56,9 @@
 .buttonAdd {
     cursor: pointer;
     background-color: transparent;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 0px 5px 5px 0px;
+    color: white;
     font-size: 20px;
     width: 30px;
 }
@@ -59,9 +67,9 @@
     background-color: rgba(0, 0, 0, 0.1);
 }
 
+
 .disabled {
-    border-color: red !important;
+    border-color: grey !important;
     border-left: 1px solid white !important;
     color: grey !important;
-    cursor: default;
 }
